--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
         "twig/twig": "2.3.*",
         "phpoffice/phpexcel": "1.8.*",
         "kint-php/kint": "*",
-        "phpmailer/phpmailer": "*",
+        "phpmailer/phpmailer": "5.2.25",
         "doctrine/orm": "^2.5",
         "symfony/yaml": "*",
         "symfony/console": "~2.0",
-        "packaged/thrift": "0.10.*"
+        "packaged/thrift": "0.10.*",
+        "qiniu/qiniu": "dev-master"
     },
     "authors": [
         {
